# libs

./: .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.json  .git-blame-ignore-revs  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakeListsGtestInclude.cmake  CMakePresets.json  COPYING  Contributing.md  LICENSE  Makefile  NOTICES  OWNERS  README.md  codecov.yml  coding_conventions.md  coding_style.md  compile-probe.sh  libs.kdev4  mkdocs.yml  release.md  scapdocs.txt  vcpkg-configuration.json  vcpkg.json
benchmark/: CMakeLists.txt  README.md  main.cpp
benchmark/libsinsp/: filter_modifiers.cpp  utils.cpp
contrib/elftoolchain/libelf/: CMakeLists.txt  Makefile  _libelf.h  _libelf_config.h  elf.3  elf.c  elf_begin.3  elf_begin.c  elf_cntl.3  elf_cntl.c  elf_data.c  elf_end.3  elf_end.c  elf_errmsg.3  elf_errmsg.c  elf_errno.c  elf_fill.c  elf_flag.c  elf_flagdata.3  elf_getarhdr.3  elf_getarhdr.c  elf_getarsym.3  elf_getarsym.c  elf_getbase.3  elf_getbase.c  elf_getdata.3  elf_getident.3  elf_getident.c  elf_getphdrnum.3  elf_getphnum.3  elf_getscn.3  elf_getshdrnum.3  elf_getshdrstrndx.3  elf_getshnum.3  elf_getshstrndx.3  elf_getversion.3  elf_getversion.c  elf_hash.3  elf_hash.c  elf_kind.3  (+78 more)
driver/bpf/: CMakeLists.txt  Makefile  Makefile.in  bpf_helpers.h  builtins.h  filler_helpers.h  fillers.h  maps.h  missing_definitions.h  plumbing_helpers.h  probe.c  quirks.h  ring_helpers.h  terminate_filler_helpers.h  toctou_mitigation.h  types.h
driver/bpf/configure/: Makefile  Makefile.inc.in  build.sh
driver/bpf/test/: CMakeLists.txt  README.md  filler_executor.cpp  filler_executor.h  filler_test.cpp  filler_test.h  probe_loader.c  probe_loader.h  runner.cpp  test_fillers.c  test_fillers.h  test_renameat2.cpp
driver/modern_bpf/: CMakeLists.txt  add_new_syscalls.md  bpfvalidator_config.yaml  bpfvalidator_config_amd64.yaml  bpfvalidator_config_arm64.yaml
driver/modern_bpf/definitions/: events_dimensions.h  missing_definitions.h  struct_flavors.h  vmlinux.h
driver/modern_bpf/helpers/: README.md
driver/modern_bpf/license/: license.bpf.c
driver/modern_bpf/maps/: maps.h
driver/modern_bpf/shared_definitions/: struct_definitions.h
test/drivers/: CMakeLists.txt  README.md  start_tests.cpp
test/drivers/event_class/: event_class.cpp  event_class.h  network_utils.h
test/drivers/flags/: capabilities.cpp  flags_definitions.h
test/drivers/helpers/: file_opener.cpp  file_opener.h  ia32.c  proc_parsing.cpp  proc_parsing.h
test/libscap/: CMakeLists.txt  README.md  libscap_test_var.h.in
test/libscap/fuzz/: CMakeLists.txt  README.md  fuzz_scap_event_decode.cc  fuzz_scap_event_decode.dict
test/libscap/helpers/: engines.cpp  engines.h
test/libscap/linux/: CMakeLists.txt
test/libsinsp_e2e/: CMakeLists.txt  capture_to_file_test.cpp  container.cpp  container_cgroup.cpp  container_image_splitting.cpp  docker_utils.cpp  docker_utils.h  event_capture.cpp  event_capture.h  file_manager.h  forking.cpp  fs.cpp  ipv6.cpp  libsinsp_test_var.h.in  main.cpp  paths.cpp  process.cpp  scap_file_reader.h  subprocess.cpp  subprocess.h  suppress_events.cpp  sys_call_test.cpp  sys_call_test.h  tcp_client_server.cpp  tcp_client_server.h  tcp_client_server_ipv4_mapped.cpp  test_helper.cpp  test_helper.sh.in  thread_state.cpp  threadinfo.cpp  udp_client_server.cpp  unix_client_server.cpp  unix_udp_client_server.cpp  utils.h  vtidcollision.c
test/libsinsp_e2e/container/: container.cpp  container_cgroup.cpp  container_cri.cpp  docker_utils.cpp  docker_utils.h
test/libsinsp_e2e/fake_cri/: CMakeLists.txt  fake_cri.cpp  fake_cri_crio_container.pb  fake_cri_crio_images.pb  fake_cri_crio_listcontainers.pb  fake_cri_crio_pod.pb  fake_cri_falco_container.pb  fake_cri_falco_images.pb  fake_cri_falco_listcontainers.pb  fake_cri_falco_pod.pb  fake_cri_multi_container.pb  fake_cri_multi_images.pb  fake_cri_multi_listcontainers.pb
test/libsinsp_e2e/resources/: CMakeLists.txt  chname.cpp  execve.c  fake_docker.py  forking_main_thread_exit.c  forking_nested.c  unix_client_server.py
test/modern_bpf/: CMakeLists.txt  README.md  start_tests.cpp
test/modern_bpf/event_class/: event_class.cpp  event_class.h  network_utils.h
test/modern_bpf/helpers/: proc_parsing.cpp
userspace/libpman/: CMakeLists.txt  README.md  libpman.pc.in
userspace/libpman/include/: libpman.h
userspace/libpman/src/: capture.c  configuration.c  events_prog_names.c  events_prog_names.h  events_prog_table.c  events_prog_table.h  iterators.c  lifecycle.c  maps.c  programs.c  programs.h  ringbuffer.c  ringbuffer_debug_macro.h  ringbuffer_definitions.h  sc_set.c  state.c  state.h  stats.c  support_probing.c  support_probing.h
userspace/libscap/: CMakeLists.txt  clock_helpers.h  debug_log_helpers.h  engine_handle.h  libscap.pc.in  metrics_v2.h  plugin_info.h  ppm_sc_names.c  scap-int.h  scap.c  scap.def  scap.h  scap_api_version.c  scap_api_version.h  scap_assert.h  scap_barrier.h  scap_bpf.c  scap_bpf.h  scap_buffer.c  scap_buffer.h  scap_cgroup_set.h  scap_config.h.in  scap_const.h  scap_empty_params_set.c  scap_endian.h  scap_engine_util.c  scap_engine_util.h  scap_engines.h  scap_event.c  scap_fds.c  scap_gettimeofday.h  scap_iflist.c  scap_kmod.c  scap_likely.h  scap_limits.h  scap_log.h  scap_machine_agent.c  scap_machine_info.h  scap_open.h  scap_os_machine_info.h  (+40 more)
userspace/libscap/compat/: bpf.h  bpf_common.h  misc.h  perf_event.h
userspace/libscap/doxygen/: header.html
userspace/libsinsp/: CMakeLists.txt  addrinfo.cpp  addrinfo.h  atomic_helpers.h  base64.h  capture_stats_source.h  cgroup_limits.cpp  cgroup_limits.h  cgroup_list_counter.h  container.cpp  container.h  container_info.cpp  container_info.h  cri-v1.proto  cri.cpp  cri.h  cri.hpp  cri.proto  cri_settings.cpp  cri_settings.h  cyclewriter.cpp  cyclewriter.h  dns_manager.cpp  dns_manager.h  dumper.cpp  dumper.h  event.cpp  event.h  eventformatter.cpp  eventformatter.h  fdinfo.cpp  fdinfo.h  fdtable.cpp  fdtable.h  fgetpwent_r.cpp  fgetpwent_r.h  fields_info.cpp  fields_info.h  file_hash_calculator.cpp  file_hash_calculator.h  (+282 more)
(+1959 files in other folders)
